--- a/src/Applications/MultiAlign/app.config
+++ b/src/Applications/MultiAlign/app.config
@@ -36,11 +36,15 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2014.1.299.1" newVersion="2014.1.299.1" />
+        <bindingRedirect oldVersion="0.0.0.0-2014.1.546.0" newVersion="2014.1.546.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.94.0" newVersion="1.0.94.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="OxyPlot.Wpf" publicKeyToken="75e952ba404cdbb0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2014.1.546.0" newVersion="2014.1.546.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
