--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -103,12 +103,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\PNNLOmicsIO.dll</HintPath>
     </Reference>
+    <Reference Include="QuadTreeLib">
+      <HintPath>..\..\lib\QuadTreeLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.94.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.94.0\lib\net45\System.Data.SQLite.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -145,6 +149,7 @@
     </Compile>
     <Compile Include="DMS\DmsLookupViewModel.cs" />
     <Compile Include="FeatureFindingSettingsViewModel.cs" />
+    <Compile Include="FeaturePoint.cs" />
     <Compile Include="IAlignmentWindowFactory.cs" />
     <Compile Include="IFeatureWindowFactory.cs" />
     <Compile Include="LCMSFeatureAligner.cs" />
