--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -216,6 +216,9 @@
     </Compile>
     <Compile Include="Feature Finding\MSFeatureViewFactory.cs" />
     <Compile Include="Feature Finding\MSFeatureViewModel.cs" />
+    <Compile Include="LoadingScreen.xaml.cs">
+      <DependentUpon>LoadingScreen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utils\ClusterMatch.cs" />
     <Compile Include="Utils\PlotViewModelBase.cs" />
     <Compile Include="Utils\TaskBarProgressSingleton.cs" />
@@ -269,6 +272,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Feature Finding\FeatureFindingSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LoadingScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
