--- a/src/GridApps/MultiAlignChargeStateProcessor/MultiAlignChargeStateProcessor.csproj
+++ b/src/GridApps/MultiAlignChargeStateProcessor/MultiAlignChargeStateProcessor.csproj
@@ -42,9 +42,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="InformedProteomics.Backend, Version=1.0.5704.28758, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\lib\InformedProteomics.Backend\InformedProteomics.Backend.dll</HintPath>
+    <Reference Include="InformedProteomics.Backend">
+      <HintPath>..\..\..\lib\InformedProteomics\InformedProteomics.Backend.dll</HintPath>
     </Reference>
     <Reference Include="PNNLOmics, Version=1.1.5385.41078, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
