--- a/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -40,9 +40,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\alglibnet2.dll</HintPath>
     </Reference>
-    <Reference Include="InformedProteomics.Backend, Version=1.0.5718.25160, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\lib\InformedProteomics.Backend\InformedProteomics.Backend.dll</HintPath>
+    <Reference Include="InformedProteomics.Backend">
+      <HintPath>..\..\..\lib\InformedProteomics\InformedProteomics.Backend.dll</HintPath>
+    </Reference>
+    <Reference Include="InformedProteomics.FeatureFinding">
+      <HintPath>..\..\..\lib\InformedProteomics\InformedProteomics.FeatureFinding.dll</HintPath>
     </Reference>
     <Reference Include="Mage, Version=1.3.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
