--- a/src/Test/AlignmentPaperTestSuite/AlignmentPaperTestSuite.csproj
+++ b/src/Test/AlignmentPaperTestSuite/AlignmentPaperTestSuite.csproj
@@ -75,11 +75,11 @@
 -->
     <Reference Include="PNNLOmics, Version=1.1.5385.41078, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\lib\PNNLOmics.dll</HintPath>
+      <HintPath>..\..\..\lib\InformedProteomics\PNNLOmics.dll</HintPath>
     </Reference>
     <Reference Include="PNNLOmicsIO, Version=1.1.5385.36913, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\lib\PNNLOmicsIO.dll</HintPath>
+      <HintPath>..\..\..\lib\InformedProteomics\PNNLOmicsIO.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
