--- a/src/GridApps/MultiAlignSTACRunner/MultiAlignSTACRunner.csproj
+++ b/src/GridApps/MultiAlignSTACRunner/MultiAlignSTACRunner.csproj
@@ -38,10 +38,9 @@
   <ItemGroup>
     <Reference Include="PNNLOmics, Version=1.1.5385.41078, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\lib\PNNLOmics.dll</HintPath>
+      <HintPath>..\..\..\lib\InformedProteomics\PNNLOmics.dll</HintPath>
     </Reference>
-    <Reference Include="PNNLOmicsIO, Version=1.1.5385.36913, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="PNNLOmicsIO">
       <HintPath>..\..\..\lib\PNNLOmicsIO.dll</HintPath>
     </Reference>
     <Reference Include="System" />
